Sat Jun 12 11:57:55 GMT 2010  Olly Betts <olly@survex.com>

	* python/pythontest2.py: Fix testcase weight_normalise - for a
	  non-existent term, get_max_possible() can now return zero so you
	  can't calculate the reciprocal of it.

Sat Jun 12 06:25:08 GMT 2010  Olly Betts <olly@survex.com>

	* python/util.i: Add workaround so xapian.BAD_VALUENO is a constant
	  rather than variable which can't be written to. (ticket#297)
	* python/smoketest2.py: Add regression test for this by checking that
	  xapian.cvar doesn't exist.

Thu Jun 10 04:26:31 GMT 2010  Olly Betts <olly@survex.com>

	* xapian.i: Change MatchDecider and ExpandDecider dtors to be
	  declarations rather than empty definitions (should make no
	  difference, but it's cleaner if they match the Xapian headers).

Wed Jun 09 13:44:25 GMT 2010  Olly Betts <olly@survex.com>

	* xapian.i: Only mark Xapian::StemImplementation as a director class if
	  we aren't ignoring it.

Wed Jun 09 13:36:54 GMT 2010  Olly Betts <olly@survex.com>

	* python/Makefile.am: Fix cleaning of test directories to use "rm -rf"
	  rather than "rm -f".

Thu Jun 03 15:21:13 GMT 2010  Richard Boulton <richard@tartarus.org>

	* csharp/Makefile.am: Add missing
	  SWIGTYPE_p_Xapian__StemImplementation.cs file.

Tue Jun 01 16:23:23 GMT 2010  Olly Betts <olly@survex.com>

	* csharp/util.i,java-swig/util.i,python/generate-python-exceptions,
	  python/smoketest2.py,xapian.i: Wrap Xapian::StemImplementation.
	  Currently only tested for Python, and requires explicit use of
	  __disown__() there.

Thu May 27 22:30:54 GMT 2010  Olly Betts <olly@survex.com>

	* xapian.i: Ignore Xapian::StemImplementation for now so that the
	  tree builds while I sort out wrapping it properly.

Thu May 27 09:34:13 GMT 2010  Olly Betts <olly@survex.com>

	* php/except.i: zend_throw_exception() returns, so we should return
	  control to PHP directly after calling it to avoid needless extra
	  work and possible issues.
